[tool.poetry]
name = "llm-google-place"
version = "0.1.0"
description = ""
authors = ["Joy Cheng <joy.cheng@phntms.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
langchain = "^0.2.11"
googlemaps = "^4.10.0"
boto3 = "^1.34.149"
streamlit = "^1.37.0"
python-dotenv = "^1.0.1"
streamlit-card = "^1.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
